spacing issue fixed for mobile

--- a/terminals/src/css/Contact.css
+++ b/terminals/src/css/Contact.css
@@ -19,7 +19,7 @@ img {
     flex-direction: column;
     background-color: #323232;
     border-radius: 40px;
-    margin-top: 95px;
+    margin-top: 25px;
     width: 40vw;
     align-self: center;
     justify-content: center;
